--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Excursion</title>
 </head>
 <body>
+    <header>
+        <h1>Discover hidden places in the world around you</h1>
+        <a>Download Excursion (Coming soon!)</a>
+    </header>
     
 </body>
 </html>
