--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
         <h1>Discover hidden places in the world around you</h1>
         <a>Download Excursion (Coming soon!)</a>
     </header>
-    
+    <div class="body">
+        <video muted autoplay name="media">
+            <source src="resources/videos/excursion.mp4" type="video/mp4">
+        </video>
+        <h2>Your personal travel guide</h2>
+        <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+        <p>
+            <img src="resources/images/camp.jpg">
+        </p>
+        <p>
+            <img src="resources/images/phone.webp">
+        <h2>Coming Soon for iPhone and Android</h2>
+        <a>Download Excursion (Coming soon)</a>
+    </div>
+    <footer>Excursion</footer>
 </body>
 </html>
