--- a/index.html
+++ b/index.html
@@ -4,27 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Excursion</title>
 </head>
 <body>
     <header>
-        <h1>Discover hidden places in the world around you</h1>
+        <p class="title">Discover hidden places in the world around you</p>
         <a>Download Excursion (Coming soon!)</a>
     </header>
     <div class="body">
         <video muted autoplay name="media">
             <source src="resources/videos/excursion.mp4" type="video/mp4">
         </video>
-        <h2>Your personal travel guide</h2>
-        <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+        <p class="heading">Your personal travel guide</p>
+        <p class="text">Excursion remembers places you like, and recommends new points of interest around you.<p>
         <p>
             <img src="resources/images/camp.jpg">
         </p>
         <p>
             <img src="resources/images/phone.webp">
-        <h2>Coming Soon for iPhone and Android</h2>
+        <p class="heading">Coming Soon for iPhone and Android</p>
         <a>Download Excursion (Coming soon)</a>
     </div>
-    <footer>Excursion</footer>
+    <footer class="text"><i class="fa fa-copyright"></i>Excursion</footer>
 </body>
 </html>
