--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a>Download Excursion (Coming soon!)</a>
     </header>
     <div class="body">
-        <video muted autoplay name="media">
+        <video muted loop autoplay name="media">
             <source src="resources/videos/excursion.mp4" type="video/mp4">
         </video>
         <p class="heading">Your personal travel guide</p>
